fix a layout issue

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -91,6 +91,7 @@ a.dark-mode {
   /* Replace with your light mode image */
 }
 .container {
+  box-sizing: border-box;
   display: flex;
   flex-direction: row;
   padding: 10vh;
